# image-gs

./: README.md  gradio_app.py  gradio_models.py  model.py  pyproject.toml
gsplat/: pyproject.toml  setup.py
gsplat/src/gsplat/: __init__.py  project_gaussians_2d_scale_rot.py  rasterize_no_tiles.py  rasterize_sum.py
gsplat/src/gsplat/cuda/: _backend.py
utils/: image_utils.py
