[project]
name = "image-gs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lpips>=0.1.4",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pytorch-msssim>=1.0.0",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
    "torch>=2.6.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.21.0",
    "fused_ssim",
    "gsplat",
    "pyyaml>=6.0.2",
]

[tool.uv.sources]
fused_ssim = { git = "https://github.com/rahul-goel/fused-ssim/" }
gsplat = { workspace = true }
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[tool.uv.extra-build-dependencies]
fused-ssim = ["torch", "numpy"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.workspace]
members = [
    "gsplat",
]

[project.scripts]
image_gs = "main.py"